--- a/manual.qmd
+++ b/manual.qmd
@@ -1,3 +1,45 @@
 ---
 title: "Lab Manual"
 ---
+
+This area is for lab members only.
+
+If you are interested in our work, join us by clicking [here]().
+
+#### Welcome new members!
+
+We are excited to have you join the Quantitative Histories Workshop! 
+
+This section contains links to the required on-boarding documents that you will need to complete for our lab. 
+
+When completing documents with sensitive information, please do not upload or email personal details (such as your SSN). Instead, you should stop by a Faculty Director's office hours to finalize any forms. 
+
+For your first task, please complete the following steps below:
+
+| <u>Step 1: Contact information </u>
+
+- To complete the *Quantitative Histories Workshop Information Form*, please click [here]().
+
+| <u>Step 2: Paperwork </u>
+
+- Morehouse College lab members, please click [here]().
+
+- Howard University lab members, please click [here]().
+
+- External partners, consultants, and others, please click [here]().
+
+| <u>Step 3: Say cheese! </u>
+
+- Please upload your bio and a high-resolution photo [here]().
+
+| <u>Step 4: Project on-boarding </u>
+
+- Members must complete on-boarding for their project group; please see your group leader. 
+
+| <u>Step 5: Readings</u>
+
+- New members should get started by exploring the following books and papers:
+  
+  * *We Do This 'Til We Free Us* by Mariame Kaba.
+  
+If you are unsure of who to contact, please email the lab manager or Dr. Alexander.
