--- a/people.qmd
+++ b/people.qmd
@@ -4,9 +4,17 @@ title: "People"
 
 Our lab is made up of a highly versatile and collaborative team of researchers. 
 
+<u>Project PIs</u>
+
+- Hye Ryeon Jang, Morehouse College
+
+- Harlin Lee, University of North Carolina at Chapel Hill
+
+- Lorenzo Harper, University of North Carolina at Charlotte
+
 <u>Current Lab Members</u>
 
-- Basil Ghali, Psychology (Morehouse College, Class of 2023)
+- Basil Ghali, Psychology (Howard University, PhD Student; Morehouse College, Class of 2023)
 
 <u>Former Lab Members</u>
 
