--- a/manual.qmd
+++ b/manual.qmd
@@ -14,21 +14,13 @@ For your first task, please complete the following steps below:
 
 | <u>Step 1: Contact information </u>
 
-- To complete the *Quantitative Histories Workshop Information Form*, please click [here]().
+- To complete the *Quantitative Histories Workshop Information Form*, please click [here](https://forms.gle/FS2RgyaTWZNGyHr89).
 
 | <u>Step 2: Paperwork </u>
 
-- Morehouse College lab members, please click [here]().
+- Please speak with a lab director.
 
-- Howard University lab members, please click [here]().
-
-- External partners, consultants, and others, please click [here]().
-
-| <u>Step 3: Say cheese! </u>
-
-- Please upload your bio and a high-resolution photo [here]().
-
-| <u>Step 4: Project on-boarding </u>
+| <u>Step 3: Project on-boarding </u>
 
 - Members must complete on-boarding for their project group; please see your group leader. 
 
