--- a/lessons/lesson01.qmd
+++ b/lessons/lesson01.qmd
@@ -23,13 +23,15 @@ format:
 
 Code and data prep should follow the [Good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510){target="_blank"} model.
 
+[Code directory](img/code-directory-tree.png){target="_blank"}
+
 ### Analysis
 
 Analyses can be done in any software program and a clear summary of steps should be included.
 
 ### Reporting
 
-All reports should be generated using an .RMrakdown.
+All reports should be generated using an .RMarkdown.
 
 ### Case study
 
