--- a/manual.qmd
+++ b/manual.qmd
@@ -34,4 +34,6 @@ For your first task, please complete the following steps below:
 | [0](lessons/lesson00.html) | [Getting started](lessons/lesson00-slides.html) | |
 | [1](lessons/lesson01.html) |[Introduction to the Quantitative Histories Workshop Model](lessons/lesson01-slides.html) |  |
 | [2](lessons/lesson02.html) |[Case Study 1: Fatal Police Interactions](lessons/lesson02-slides.html) |  |
+| [3](lessons/lesson03.html) |[Case Study 2: The Red Record](lessons/lesson03-slides.html) |  |
+
 :::
